--- a/app/src/main/res/layout/fragment_career2.xml
+++ b/app/src/main/res/layout/fragment_career2.xml
@@ -1,10 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment.Career.Career2Fragment">
+    <RelativeLayout
+        android:id="@+id/activity_top"
+        android:layout_marginTop="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:clickable="true"
+            android:id="@+id/btn_add_award"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:clickable="false"
+                android:id="@+id/btn_career_plus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_plus"/>
+            <TextView
+                android:clickable="false"
+                android:layout_toRightOf="@+id/btn_career_plus"
+                android:layout_marginLeft="8dp"
+                android:text="추가하기"
+                android:textSize="16sp"
+                android:fontFamily="sans-serif"
+                android:textStyle="normal"
+                android:textColor="#000000"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="14sp"
+                android:gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
 
+    </RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/activity_top"
+        android:layout_marginTop="12dp"
+        android:id="@+id/rv_career2_frag_award_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 
-
-</FrameLayout>
+</RelativeLayout>
