--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -24,11 +24,11 @@
                 android:orientation="horizontal"
                 android:weightSum="3" android:layout_weight="6">
             <RelativeLayout
+                    android:id="@+id/frag_calendar_before"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
                 <ImageView
-                        android:id="@+id/frag_calendar_before"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -47,11 +47,11 @@
                         android:text=""/>
             </RelativeLayout>
             <RelativeLayout
+                    android:id="@+id/frag_calendar_next"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1">
                 <ImageView
-                        android:id="@+id/frag_calendar_next"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_cal_arrow_right"
@@ -135,7 +135,8 @@
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="8.4dp"
                     android:layout_marginRight="8.5dp"
-                    android:layout_marginBottom="24.2dp">
+                    android:layout_marginBottom="24.2dp"
+                    android:visibility="invisible">
 
             </android.support.v4.view.ViewPager>
 
@@ -147,25 +148,29 @@
                     android:orientation="vertical"
                     android:weightSum="100"
                     android:background="#ffffff"
+                    android:layout_marginLeft="8.4dp"
+                    android:layout_marginRight="8.5dp"
                     android:visibility="visible">
                 <android.support.v4.view.ViewPager
                         android:id="@+id/vp_frag_calendar_view_pager2"
                         android:layout_width="match_parent"
-                        android:layout_marginLeft="8.4dp"
-                        android:layout_marginRight="8.5dp"
+
                         android:layout_height="0dp"
                         android:layout_weight="50"/>
                 <LinearLayout
+                        android:id="@+id/ll_todo_top_bar"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:orientation="vertical"
                         android:background="@drawable/textline"
                         android:layout_weight="8">
                     <ImageView
-                            android:layout_width="wrap_content"
+                            android:id="@+id/iv_big_calendar"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginBottom="5dp"
+                            android:paddingVertical="5dp"
                             android:src="@drawable/ic_todolist_tab_down"/>
                     <TextView
                             android:layout_width="wrap_content"
@@ -176,11 +181,14 @@
                             android:text="투두리스트"/>
 
                 </LinearLayout>
+                <ScrollView android:layout_width="wrap_content"
+                            android:layout_height="0dp"
+                            android:layout_weight="42">
                 <android.support.v7.widget.RecyclerView
                         android:id="@+id/rv_frag_calendar_todo_list"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="42"/>
+                        android:layout_height="wrap_content"/>
+                </ScrollView>
             </LinearLayout>
             <ImageView
                     android:id="@+id/go_todo_list"
@@ -197,10 +205,11 @@
                     android:layout_height="62dp"
                     android:layout_marginBottom="29dp"
                     android:layout_marginRight="26dp"
-                    android:src="@drawable/btn_floating_plus"/>
+                    android:src="@drawable/bt_floating_plus"/>
 
         </FrameLayout>
 
     </LinearLayout>
+
 
 </RelativeLayout>
