--- a/app/src/main/res/layout/fragment_first_info.xml
+++ b/app/src/main/res/layout/fragment_first_info.xml
@@ -4,7 +4,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff">
+        android:background="#ffffff" xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
             android:layout_weight="2"
             android:clickable="false"
@@ -12,7 +12,6 @@
             android:id="@+id/info_animation1"
             android:layout_width="match_parent"
             android:layout_height="0dp">
-
     </RelativeLayout>
 
     <RelativeLayout
