--- a/app/src/main/res/drawable/career_rectangle.xml
+++ b/app/src/main/res/drawable/career_rectangle.xml
@@ -8,4 +8,7 @@
         android:width="340dp"/>
     <corners
         android:radius="4dp"/>
+    <stroke android:width = "1dp"
+            android:color = "#ebedef"/>
+
 </shape>
