--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:elevation="5dp"
-            app:tabIndicatorColor="#40D39F"
+            app:tabIndicatorColor="#00000000"
             android:layout_alignParentTop="true">
     </android.support.design.widget.TabLayout>
 
