--- a/app/src/main/res/layout/fragment_career1.xml
+++ b/app/src/main/res/layout/fragment_career1.xml
@@ -44,6 +44,8 @@
         android:layout_marginTop="12dp"
         android:id="@+id/rv_career1_frag_activity_list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
