--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#5e7cff</color>
-    <color name="colorPrimaryDark">#f5f5f5</color>
+    <color name="colorPrimaryDark">#00000000</color>
     <color name="colorAccent">#5e7cff</color>
 
     <color name="brown_grey">#9e9e9e</color>
