마이페이지 조합 맞추기

--- a/app/src/main/res/layout/activity_interest_area.xml
+++ b/app/src/main/res/layout/activity_interest_area.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="55dp">
         <ImageView
-                android:id="@+id/iv_back_4"
+                android:id="@+id/iv_back_mypage"
                 android:paddingTop="16dp"
                 android:paddingBottom="12dp"
                 android:src="@drawable/ic_arrow_back"
