--- a/app/src/main/res/layout/activity_career.xml
+++ b/app/src/main/res/layout/activity_career.xml
@@ -30,7 +30,7 @@
         android:id="@+id/tl_top_navi_career_top_menu"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        app:tabIndicatorColor="#40D39F">
+        app:tabIndicatorColor="0000">
     </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
