--- a/app/src/main/res/layout/top_navi_career.xml
+++ b/app/src/main/res/layout/top_navi_career.xml
@@ -1,61 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="44dp"
-    android:orientation="horizontal">
-    <RelativeLayout
-        android:id="@+id/btn_top_navi_activity_tab"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_height="44dp"
+        android:orientation="horizontal">
+    <RelativeLayout
+            android:id="@+id/btn_top_navi_activity_tab"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
         <TextView
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="대외활동"
-            android:textSize="16sp"
-            android:textColor="#000000"
-            android:fontFamily="sans-serif-medium"
-            android:textStyle="normal"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="14sp"
-            android:gravity="center_horizontal"/>
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="대외활동"
+                android:textSize="16sp"
+                android:textColor="#000000"
+                android:fontFamily="sans-serif-medium"
+                android:textStyle="normal"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="14sp"
+                android:gravity="center_horizontal"/>
+        <ImageView
+                android:scaleType="fitXY"
+                android:layout_alignParentBottom="true"
+                android:src="@drawable/tab_career_android"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
     </RelativeLayout>
     <RelativeLayout
-        android:id="@+id/btn_top_navi_award_tab"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+            android:id="@+id/btn_top_navi_award_tab"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
         <TextView
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="수상내역"
-            android:textSize="16sp"
-            android:textColor="#000000"
-            android:fontFamily="sans-serif-medium"
-            android:textStyle="normal"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="14sp"
-            android:gravity="center_horizontal"/>
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="수상내역"
+                android:textSize="16sp"
+                android:textColor="#000000"
+                android:fontFamily="sans-serif-medium"
+                android:textStyle="normal"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="14sp"
+                android:gravity="center_horizontal"/>
     </RelativeLayout>
     <RelativeLayout
-        android:id="@+id/btn_top_navi_certificate_tab"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+            android:id="@+id/btn_top_navi_certificate_tab"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
         <TextView
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="자격증"
-            android:textSize="16sp"
-            android:textColor="#000000"
-            android:fontFamily="sans-serif-medium"
-            android:textStyle="normal"
-            android:letterSpacing="-0.02"
-            android:lineSpacingExtra="14sp"
-            android:gravity="center_horizontal"/>
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="자격증"
+                android:textSize="16sp"
+                android:textColor="#000000"
+                android:fontFamily="sans-serif-medium"
+                android:textStyle="normal"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="14sp"
+                android:gravity="center_horizontal"/>
     </RelativeLayout>
 </LinearLayout>
