--- a/app/src/main/res/layout/fragment_calendar_detail.xml
+++ b/app/src/main/res/layout/fragment_calendar_detail.xml
@@ -1,10 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
     <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/frag_calendar_detail_recycle_view" android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" android:layout_marginTop="0dp" android:layout_marginStart="0dp"/>
-</RelativeLayout>
+            android:layout_height="match_parent"
+            android:id="@+id/frag_calendar_detail_recycle_view"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="0dp"/>
+
+    <LinearLayout
+            android:id="@+id/ll_todo_all_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        <LinearLayout
+                android:id="@+id/ll_todo_top_bar2"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:background="@drawable/textline"
+                android:layout_weight="8">
+            <ImageView
+                    android:id="@+id/iv_big_calendar2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="5dp"
+                    android:paddingVertical="5dp"
+                    android:src="@drawable/ic_todolist_tab_down"/>
+            <TextView
+                    android:id="@+id/tv_todo_title2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textSize="20dp"
+                    android:layout_marginBottom="4dp"
+                    android:text="투두리스트"/>
+        </LinearLayout>
+        <com.baoyz.swipemenulistview.SwipeMenuListView
+                android:id="@+id/listView2"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="42"/>
+
+    </LinearLayout>
+
+</LinearLayout>
