--- a/app/src/main/res/layout/rv_item_award_list.xml
+++ b/app/src/main/res/layout/rv_item_award_list.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="125dp">
+    android:layout_height="137dp">
 
     <ImageView
+            android:layout_marginBottom="12dp"
         android:id="@+id/career_card_background"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
@@ -12,6 +14,7 @@
         android:src="@drawable/award_rectangle"/>
 
     <ImageView
+            android:id="@+id/btn_award_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/career_card_background"
