--- a/app/src/main/res/layout/rv_item_career_list.xml
+++ b/app/src/main/res/layout/rv_item_career_list.xml
@@ -2,9 +2,11 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="171dp">
+    android:layout_height="183dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
+            android:layout_marginBottom="12dp"
         android:id="@+id/career_card_background"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
@@ -12,6 +14,7 @@
         android:src="@drawable/career_rectangle"/>
 
     <ImageView
+            android:id="@+id/btn_career_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/career_card_background"
