--- a/app/src/main/res/layout/activity_career.xml
+++ b/app/src/main/res/layout/activity_career.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              tools:context=".Career.CareerActivity">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".Career.CareerActivity">
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="56dp">
@@ -22,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:text="이력"
                 android:textSize="18sp"
-                android:textColor="#000000"
+                android:textColor="#0000"
                 android:letterSpacing="-0.02"
                 android:gravity="center_horizontal"/>
     </RelativeLayout>
