--- a/app/src/main/res/layout/fragment_calendar_detail.xml
+++ b/app/src/main/res/layout/fragment_calendar_detail.xml
@@ -10,20 +10,21 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginTop="0dp"
-            android:layout_marginStart="0dp"/>
+            android:layout_marginStart="0dp"
+    />
 
     <LinearLayout
             android:id="@+id/ll_todo_all_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:orientation="vertical">
         <LinearLayout
                 android:id="@+id/ll_todo_top_bar2"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@drawable/textline"
-                android:layout_weight="8">
+                android:background="@drawable/textline">
             <ImageView
                     android:id="@+id/iv_big_calendar2"
                     android:layout_width="match_parent"
@@ -31,7 +32,7 @@
                     android:layout_gravity="center"
                     android:layout_marginBottom="5dp"
                     android:paddingVertical="5dp"
-                    android:src="@drawable/ic_todolist_tab_down"/>
+                    android:src="@drawable/todolist_button"/>
             <TextView
                     android:id="@+id/tv_todo_title2"
                     android:layout_width="wrap_content"
@@ -43,7 +44,7 @@
         </LinearLayout>
         <com.baoyz.swipemenulistview.SwipeMenuListView
                 android:id="@+id/listView2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="42"/>
 
