--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,58 +2,68 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_marginTop="8dp"
               android:layout_marginBottom="8dp"
-              android:layout_width="336.6dp"
-              android:layout_height="75.3dp"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
               android:layout_marginLeft="11.6dp"
               android:layout_marginRight="11.8dp"
               android:orientation="horizontal">
     <LinearLayout
-            android:layout_width="278.5dp"
-            android:layout_height="57.9dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_weight="5"
             android:layout_marginVertical="8.7dp">
         <TextView
                 android:id="@+id/tv_rv_todo_category"
                 android:layout_width="50.8dp"
                 android:layout_height="19.4dp"
+                android:layout_marginLeft="5dp"
                 android:textStyle="bold"
                 android:textSize="13dp"
                 android:text="공모전"/>
         <TextView
                 android:id="@+id/tv_rv_todo_title"
-                android:layout_width="243.9dp"
-                android:layout_height="23.2dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:textSize="20dp"
                 android:text="HDC 아이콘트롤스 조명 공모전"/>
         <TextView
                 android:id="@+id/tv_rv_todo_period"
                 android:layout_width="250.8dp"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:textSize="14dp"
                 android:text="HDC 아이콘트롤스 조명 공모전"/>
     </LinearLayout>
     <LinearLayout
-            android:layout_width="57.2dp"
-            android:layout_height="57.9dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_marginVertical="8.7dp"
+            android:layout_weight="1"
+            android:weightSum="3"
             android:orientation="vertical">
         <TextView
                 android:id="@+id/tv_rv_d_day"
                 android:layout_width="57.2dp"
-                android:layout_height="32dp"
+                android:layout_height="0dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="8dp"
-                android:text="D-6"
+                android:layout_weight="2"
+                android:text="5"
+                android:textSize="35dp"
+                android:textStyle="bold"
                 android:gravity="center"/>
         <TextView
                 android:id="@+id/tv_rv_d_day2"
                 android:layout_width="57.2dp"
-                android:layout_height="32dp"
+                android:layout_height="0dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="8dp"
-                android:text="D-6"
+                android:layout_weight="1"
+                android:text="일 남음"
                 android:gravity="center"/>
     </LinearLayout>
 
