--- a/app/src/main/res/layout/fragment_career1.xml
+++ b/app/src/main/res/layout/fragment_career1.xml
@@ -38,14 +38,22 @@
         </RelativeLayout>
 
     </RelativeLayout>
-    <android.support.v7.widget.RecyclerView
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/activity_top"
-        android:layout_marginTop="12dp"
-        android:id="@+id/rv_career1_frag_activity_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <FrameLayout
+            android:id="@+id/fl_rv_career1_frag_activity_list"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/activity_top"
+            android:layout_marginTop="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+                android:layout_centerHorizontal="true"
 
-    </android.support.v7.widget.RecyclerView>
+                android:id="@+id/rv_career1_frag_activity_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
+    </FrameLayout>
+
 
 </RelativeLayout>
