--- a/app/src/main/res/layout/fragment_fifth_info.xml
+++ b/app/src/main/res/layout/fragment_fifth_info.xml
@@ -55,57 +55,10 @@
         </RelativeLayout>
 
         <RelativeLayout
-                android:id="@+id/progress_dots"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/info_text5"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="52dp">
-
-            <ImageView
-                    android:id="@+id/progress_active1"
-                    android:layout_width="6dp"
-                    android:layout_height="6dp"
-                    android:layout_alignParentTop="true"
-                    android:src="@drawable/progress_unactive" />
-
-            <ImageView
-                    android:id="@+id/progress_unactive1"
-                    android:layout_width="6dp"
-                    android:layout_height="6dp"
-                    android:layout_marginStart="6dp"
-                    android:layout_toEndOf="@+id/progress_active1"
-                    android:src="@drawable/progress_unactive" />
-
-            <ImageView
-                    android:id="@+id/progress_unactive2"
-                    android:layout_width="6dp"
-                    android:layout_height="6dp"
-                    android:layout_marginStart="6dp"
-                    android:layout_toEndOf="@+id/progress_unactive1"
-                    android:src="@drawable/progress_unactive" />
-
-            <ImageView
-                    android:id="@+id/progress_unactive3"
-                    android:layout_width="6dp"
-                    android:layout_height="6dp"
-                    android:layout_marginStart="6dp"
-                    android:layout_toEndOf="@+id/progress_unactive2"
-                    android:src="@drawable/progress_unactive" />
-
-            <ImageView
-                    android:id="@+id/progress_unactive4"
-                    android:layout_width="6dp"
-                    android:layout_height="6dp"
-                    android:layout_marginStart="6dp"
-                    android:layout_toEndOf="@+id/progress_unactive3"
-                    android:src="@drawable/progress_active" />
-        </RelativeLayout>
-        <RelativeLayout
+                android:layout_alignParentBottom="true"
                 android:clickable="true"
                 android:paddingHorizontal="35dp"
-                android:layout_below="@+id/progress_dots"
-                android:layout_marginTop="16dp"
+                android:layout_marginBottom="26dp"
                 android:id="@+id/btn_fifth_skip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
