--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -13,17 +13,40 @@
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     <LinearLayout
             android:id="@+id/layoutDots"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="6dp"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="65dp"
             android:gravity="center"
             android:orientation="horizontal">
 
     </LinearLayout>
+
+    <RelativeLayout
+            android:layout_alignParentBottom="true"
+            android:clickable="true"
+            android:paddingHorizontal="35dp"
+            android:layout_marginBottom="26dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true">
+
+        <TextView
+                android:id="@+id/tv_start_info"
+                android:visibility="invisible"
+                android:clickable="false"
+                android:textColor="#5a78fa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:fontFamily="sans-serif-medium"
+                android:text="시작하기"
+                android:textSize="14sp"
+                android:textStyle="normal"/>
+    </RelativeLayout>
 
 </RelativeLayout>
