--- a/app/src/main/res/layout/fragment_calendar_detail.xml
+++ b/app/src/main/res/layout/fragment_calendar_detail.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical">
     <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="345dp"
             android:id="@+id/frag_calendar_detail_recycle_view"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
