--- a/app/src/main/res/layout/fragment_calendar_detail.xml
+++ b/app/src/main/res/layout/fragment_calendar_detail.xml
@@ -4,9 +4,12 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
     <android.support.v7.widget.RecyclerView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="0dp"
             android:id="@+id/frag_calendar_detail_recycle_view"
     />
     <LinearLayout
