--- a/app/src/main/res/layout/activity_career.xml
+++ b/app/src/main/res/layout/activity_career.xml
@@ -27,11 +27,12 @@
                 android:letterSpacing="-0.02"
                 android:gravity="center_horizontal"/>
     </RelativeLayout>
+
     <android.support.design.widget.TabLayout
             android:id="@+id/tl_top_navi_career_top_menu"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            app:tabIndicatorColor="#0000">
+            app:tabIndicatorColor="#5e7cff">
     </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
