--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:background="@drawable/calendar_list_round_rectangle"
-              android:id="@+id/btn_calendar_list_item"
+
+<RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/btn_calendar_list_item"
+        android:layout_width="336.6dp"
+        android:layout_height="83.3dp">
+
+
+<LinearLayout
+        android:background="@drawable/calendar_list_round_rectangle"
+
               android:layout_marginTop="8dp"
-              android:layout_marginBottom="8dp"
               android:layout_width="336.6dp"
               android:layout_height="75.3dp"
               android:layout_marginLeft="11.6dp"
@@ -98,3 +105,4 @@
 
 
 </LinearLayout>
+</RelativeLayout>
