--- a/app/src/main/res/layout/rv_item_calendar.xml
+++ b/app/src/main/res/layout/rv_item_calendar.xml
@@ -13,7 +13,7 @@
 
     <TextView
             android:id="@+id/numbering1"
-            android:layout_width="match_parent"
+            android:layout_width="21dp"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_gravity="center"
@@ -21,7 +21,8 @@
             android:gravity="center"
             android:text="날짜"
             android:textStyle="bold"
-            android:textSize="16dp"/>
+            android:textSize="15dp"
+            android:layout_marginBottom="1dp"/>
 
     <TextView
             android:id="@+id/numbering2"
